kubernetes/platform/kafka/kafdrop/components/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafdrop
spec:
  hostnames:
  - kafdrop.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: kafdrop
       port: 9000
    matches:
    - path:
        type: PathPrefix
        value: /
